fix(OS): adjust in service order
