# docs/swagger.json
@@ -1130,6 +1130,18 @@
         "dto.ClientServiceOrderResponse": {
             "type": "object",
             "properties": {
+                "budget_parts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ServiceOrderLineResponse"
+                    }
+                },
+                "budget_services": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ServiceOrderLineResponse"
+                    }
+                },
                 "budget_status": {
                     "type": "string"
                 },
@@ -1139,10 +1151,48 @@
                 "code": {
                     "type": "string"
                 },
+                "customer_complaint": {
+                    "type": "string"
+                },
+                "latest_budget": {
+                    "$ref": "#/definitions/dto.ServiceOrderBudgetResponse"
+                },
                 "opened_at": {
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                },
+                "status_history": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ServiceOrderStatusHistory"
+                    }
+                },
+                "vehicle": {
+                    "$ref": "#/definitions/dto.ClientServiceOrderVehicleResponse"
+                }
+            }
+        },
+        "dto.ClientServiceOrderVehicleResponse": {
+            "type": "object",
+            "properties": {
+                "brand": {
+                    "type": "string"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "manufacture_year": {
+                    "type": "integer"
+                },
+                "model": {
+                    "type": "string"
+                },
+                "model_year": {
+                    "type": "integer"
+                },
+                "plate": {
                     "type": "string"
                 }
             }
@@ -1204,10 +1254,6 @@
             "required": [
                 "client_document_number",
                 "client_document_type",
-                "client_name",
-                "vehicle_brand",
-                "vehicle_model",
-                "vehicle_model_year",
                 "vehicle_plate"
             ],
             "properties": {
@@ -1218,9 +1264,6 @@
                     "type": "string"
                 },
                 "client_email": {
-                    "type": "string"
-                },
-                "client_name": {
                     "type": "string"
                 },
                 "client_phone": {
@@ -1241,19 +1284,10 @@
                         "$ref": "#/definitions/dto.ServiceOrderItemRequest"
                     }
                 },
-                "vehicle_brand": {
-                    "type": "string"
-                },
                 "vehicle_color": {
                     "type": "string"
                 },
                 "vehicle_manufacture_year": {
-                    "type": "integer"
-                },
-                "vehicle_model": {
-                    "type": "string"
-                },
-                "vehicle_model_year": {
                     "type": "integer"
                 },
                 "vehicle_plate": {
